<resources>
    <string name="app_name">Howie Note</string>
    <string name="default_text">TEST</string>
    <string name="edit_text_hint">Write Something…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_title1">Note Styles</string>
    <string name="setting_font_size_title">Font Size</string>
    <string name="setting_font_size_dialog_title">Choose Font Size</string>
    <string name="setting_sort_by_title">Sort By</string>
    <string name="setting_sort_by_dialog_title">Choose Sort By</string>


</resources>
