<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/setting_title1"
            app:iconSpaceReserved="false">
        <ListPreference
                app:key="setting_font_size"
                app:defaultValue="16"
                app:title="@string/setting_font_size_title"
                app:entries="@array/font_size_entries"
                app:entryValues="@array/font_size_values"
                app:dialogTitle="@string/setting_font_size_dialog_title"
                app:iconSpaceReserved="false"/>
        <ListPreference
                app:key="setting_sort_by"
                app:defaultValue="1"
                app:title="@string/setting_sort_by_title"
                app:entries="@array/sort_by_entries"
                app:entryValues="@array/sort_by_values"
                app:dialogTitle="@string/setting_sort_by_dialog_title"
                app:iconSpaceReserved="false"/>

    </PreferenceCategory>

<!--    <PreferenceCategory-->
    <!--            app:title="">-->


    <!--    </PreferenceCategory>-->

</PreferenceScreen>
